--- a/index.html
+++ b/index.html
@@ -15,41 +15,49 @@
         </div>
 
         <div id="container2">
-            <div id="ticketBox">
-                <button class="ticket">年間パス | Annual Pass</button>
-                <button class="ticket">大人 | Adult (18 years and up)</button>
-                <button class="ticket">中人 | Teen (12-17 years old)</button>
-                <button class="ticket">小人 | Child (4-1 years old)</button>
-                <button class="ticket">シニア | (65 years and up)</button>
+            <div class="box">
+                <div id="tixBtn">
+                    <button class="ticket">年間パス | Annual Pass</button>
+                    <button class="ticket">大人 | Adult (18 years and up)</button>
+                    <button class="ticket">中人 | Teen (12-17 years old)</button>
+                    <button class="ticket">小人 | Child (4-1 years old)</button>
+                    <button class="ticket">シニア | (65 years and up)</button>
+                </div>
+                
             </div>
 
-            <div id="calculator">
-                <div id="row1">
-                    <button class="num">7</button>
-                    <button class="num">4</button>
-                    <button class="num">1</button>
-                    <button class="num">0</button>
-                </div>
-                <div id="row2">
-                    <button class="num">8</button>
-                    <button class="num">5</button>
-                    <button class="num">2</button>
-                    <button class="num">00</button>
-                </div>
-                <div id="row3">
-                    <button class="num">9</button>
-                    <button class="num">6</button>
-                    <button class="num">3</button>
-                    <button class="num">.</button>
-                </div>
-                <div id="row4">
-                    <button class="func">Clear</button>
-                    <button class="func">Get Balance</button>
-                    <button class="func">Deposit Cash</button>
-                    <button class="func">Withdraw Cash</button>
-                    <button class="func">=</button>
-                </div>
-                <div id="row5"></div>
+            <div class="box">
+               <div id="row1">
+                   <button class="calc">7</button>
+                   <button class="calc">8</button>
+                   <button class="calc">9</button>
+                   <button class="calc">÷</button>
+                   <button class="calc">Clear</button>
+               </div>
+               <div id="row2">
+                   <button class="calc">4</button>
+                   <button class="calc">5</button>
+                   <button class="calc">6</button>
+                   <button class="calc">x</button>
+                   <button class="calc">Get Balance</button>
+               </div>
+               <div id="row3">
+                   <button class="calc">1</button>
+                   <button class="calc">2</button>
+                   <button class="calc">3</button>
+                   <button class="calc">-</button>
+                   <button class="calc">Deposit</button>
+               </div>
+               <div id="row4">
+                   <button class="calc">0</button>
+                   <button class="calc">00</button>
+                   <button class="calc">.</button>
+                   <button class="calc">+</button>
+                   <button class="calc">Withdraw</button>
+               </div>
+               <div id="row5">
+                   <button class="calc">=</button>
+               </div>
 
             </div>
 
