--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tokyo Disneyland</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Squada+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="bigContainer">
         <div id="container1">
-            <div id="company"><h1>TOKYO DISNEYLAND</h1></div>
-            <div id="totalYen"><h2>合計 (TOTAL) ¥</h2></div>
+            <div id="img"><img src="https://www.dance.nyc/images/users/10534/TDR_logoarticle_image.png" alt="" class="src"></div>
+            <div id="company">Tokyo Disneyland</div>
+            <div id="totalYen">
+                <div id="totalTxt">合計 (TOTAL) ¥
+                </div>
+                <div id="price">0.00</div>
+            </div>
         </div>
 
         <div id="container2">
@@ -39,7 +45,7 @@
                    <button class="calc">5</button>
                    <button class="calc">6</button>
                    <button class="calc">x</button>
-                   <button class="calc">Get Balance</button>
+                   <button class="calc">Balance</button>
                </div>
                <div id="row3">
                    <button class="calc">1</button>
