--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
     <div class="bigContainer">
         <div id="container1">
-            <div id="img"><img src="https://www.dance.nyc/images/users/10534/TDR_logoarticle_image.png" alt="" class="src"></div>
-            <div id="company">Tokyo Disneyland</div>
+            <div id="topHeader">
+                <div id="img"><img src="https://www.dance.nyc/images/users/10534/TDR_logoarticle_image.png" alt="" class="src"></div>
+                <div id="company">Tokyo Disneyland</div>
+            </div>
             <div id="totalYen">
                 <div id="totalTxt">合計 (TOTAL) ¥
                 </div>
-                <div id="price">0.00</div>
+                <div id="price"></div>
             </div>
         </div>
 
@@ -34,35 +36,35 @@
 
             <div class="box">
                <div id="row1">
-                   <button class="calc">7</button>
-                   <button class="calc">8</button>
-                   <button class="calc">9</button>
-                   <button class="calc">÷</button>
-                   <button class="calc">Clear</button>
+                   <button class="calc-btn num" id="calc-seven">7</button>
+                   <button class="calc-btn num" id="calc-eight">8</button>
+                   <button class="calc-btn num" id="calc-nine">9</button>
+                   <button class="calc-btn op" id="calc-divide">÷</button>
+                   <button class="calc-btn func" id="calc-clear">Clear</button>
                </div>
                <div id="row2">
-                   <button class="calc">4</button>
-                   <button class="calc">5</button>
-                   <button class="calc">6</button>
-                   <button class="calc">x</button>
-                   <button class="calc">Balance</button>
+                   <button class="calc-btn num" id="calc-four">4</button>
+                   <button class="calc-btn num" id="calc-five">5</button>
+                   <button class="calc-btn num" id="calc-six">6</button>
+                   <button class="calc-btn op" id="calc-multiply">x</button>
+                   <button class="calc-btn func" id="calc-balance">Balance</button>
                </div>
                <div id="row3">
-                   <button class="calc">1</button>
-                   <button class="calc">2</button>
-                   <button class="calc">3</button>
-                   <button class="calc">-</button>
-                   <button class="calc">Deposit</button>
+                   <button class="calc-btn num" id="calc-one">1</button>
+                   <button class="calc-btn num" id="calc-two">2</button>
+                   <button class="calc-btn num" id="calc-three">3</button>
+                   <button class="calc-btn op" id="calc-minus">-</button>
+                   <button class="calc-btn func" id="calc-deposit">Deposit</button>
                </div>
                <div id="row4">
-                   <button class="calc">0</button>
-                   <button class="calc">00</button>
-                   <button class="calc">.</button>
-                   <button class="calc">+</button>
-                   <button class="calc">Withdraw</button>
+                   <button class="calc-btn num" id="calc-zero">0</button>
+                   <button class="calc-btn num" id="calc-dblZero">00</button>
+                   <button class="calc-btn num" id="calc-decimal">.</button>
+                   <button class="calc-btn op" id="calc-plus">+</button>
+                   <button class="calc-btn func" id="calc-withdraw">Withdraw</button>
                </div>
                <div id="row5">
-                   <button class="calc">=</button>
+                   <button class="calc-btn op" id="calc-equals">=</button>
                </div>
 
             </div>
