--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
                    <button class="calc-btn num" id="calc-eight">8</button>
                    <button class="calc-btn num" id="calc-nine">9</button>
                    <button class="calc-btn op" id="calc-divide">÷</button>
-                   <button class="calc-btn func" id="calc-clear">Clear</button>
+                   <button class="calc-btn func" id="calc-clear">CL</button>
                </div>
                <div id="row2">
                    <button class="calc-btn num" id="calc-four">4</button>
                    <button class="calc-btn num" id="calc-five">5</button>
                    <button class="calc-btn num" id="calc-six">6</button>
                    <button class="calc-btn op" id="calc-multiply">x</button>
-                   <button class="calc-btn func" id="calc-balance">Balance</button>
+                   <button class="calc-btn func" id="calc-balance">BAL</button>
                </div>
                <div id="row3">
                    <button class="calc-btn num" id="calc-one">1</button>
                    <button class="calc-btn num" id="calc-two">2</button>
                    <button class="calc-btn num" id="calc-three">3</button>
                    <button class="calc-btn op" id="calc-minus">-</button>
-                   <button class="calc-btn func" id="calc-deposit">Deposit</button>
+                   <button class="calc-btn func" id="calc-deposit">DEP</button>
                </div>
                <div id="row4">
                    <button class="calc-btn num" id="calc-zero">0</button>
                    <button class="calc-btn num" id="calc-dblZero">00</button>
                    <button class="calc-btn num" id="calc-decimal">.</button>
                    <button class="calc-btn op" id="calc-plus">+</button>
-                   <button class="calc-btn func" id="calc-withdraw">Withdraw</button>
+                   <button class="calc-btn func" id="calc-withdraw">WD</button>
                </div>
                <div id="row5">
                    <button class="calc-btn op" id="calc-equals">=</button>
